HW6 Add TransactionalManager to jdbcRepositories. Probably should refactor double code in them